Fixed a bug on mobile where the menu doesnt close when you click on any of the elements, minor changes to css for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ html {
 	padding: 0;
 	width: 100vw;
 	height: 100vh;
+
+  @media screen and (max-width: 480px) {
+    height: 100%;
+    overflow: auto;
+  }
 }
 body {
   margin: 0;
@@ -12,6 +17,10 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media screen and (max-width: 480px) {
+    height: 100%;
+  }
 }
 
 code {
